# intranet-quiz-platform

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  EMAIL_SETUP.md  LICENSE  README.md  app.py  backfill_option_order.py  compose-debug.yaml  compose.yaml  docker-entrypoint.sh  email_service.py  env.example  fix_git_remote.sh  git_sync.py  llm_evaluator.py  migrate_banks.ps1  migrate_banks.sh  pyproject.toml  questions images.jsonc  questions original.jsonc  questions.jsonc  scores.jsonc  scout-findings.md  server.py  students.jsonc  utils.py
auth/: decorators.py  google_sync.py  jwt_utils.py  rate_limit.py
data/: compose.yaml  images.sql  initdb.sql
db/: __init__.py  bootstrap_admin.py  migrate.py  queries.py
docs/: 2025-12-12-race-condition.txt  ARCHITECTURE-CURRENT.md  ARCHITECTURE-SINGLE-TENANT-FILE-BASED.md  ARCHITECTURE.md  ASYNC-LLM-GRADING-PLAN.md  AdminDashboard.html  COMPLETION-PLAN.md  CONTEXT.md  DESIGN.md  LLM_GRADING_DESIGN.md  OPERATIONS.md  PROJECT.md  REFACTOR-PLAN-PROMPT.md  SCORE-TRANSFORMS.md  SINGLE-TENANT-PARITY-CHECKLIST.md  architectural_review_chat.md  architecture-assessment-2026-06-10.md  architecture-review-2026-05-23.html  deepening-candidates-2026-05-27.md  frontend-architecture-friction.md
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  students.jsonc  tsconfig.vitest.json  vite.config.ts
prompts/: open-question-system.md  open-question-user.md
question_bank/: 20250427_010617_test_without_images.jsonc
routes/: admin.py  auth.py  quiz.py  super_admin.py  teacher.py
scripts/: backup_loop.sh  import_new_scores.py  migrate_v260_to_platform.py  recover_legacy_quizparty.py  restore_backup.sh  run_tests_safe.sh
services/: archives.py  classes.py  classroom_sync.py  grading.py  images.py  llm_jobs.py  quiz_session.py  score_transforms.py  session_scores.py  snapshots.py  student_snapshots.py
static/: admin.html  index.html  main.js  style.css
tests/: conftest.py  test_api.py  test_api_load.py  test_auth.py  test_classroom_sync.py  test_concurrency.py  test_google_sync.py  test_isolation.py  test_llm_evaluator.py  test_migration.py  test_quiz_lifecycle.py  test_regrade_open.py  test_session_reopen.py
(+81 files in other folders)
